kube/service.yml
---
apiVersion: core/v1
kind: Service
metadata:
  labels:
    name: operational-data-api-service
  name: operational-data-api-service
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10443
  selector:
    name: operational-data-api
