kube/network-policy.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-operational-data-api
spec:
  podSelector:
    matchLabels:
      name: operational-data-api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    ports:
    - protocol: TCP
      port: 10443
